Fix z-index of child media modals (#3149)

--- a/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/_modal-view.scss
+++ b/src/OrchardCore.Modules/OrchardCore.Media/Assets/scss/_modal-view.scss
@@ -46,6 +46,9 @@
 #mediaModalBody.html-body-part {
     z-index: 99999; //to make it visible when trumbowyg is full screen.
 }
+#createFolderModal, #renameMediaModal {
+    z-index: 100000; // required only because of the issue with z-index of trumbowyg on full screen.
+}
 
 .modal-body #media-pager {
     .page-number, .media-first-button, .media-last-button {
